src/parser/PicoParser.js
// Generated from Pico.g4 by ANTLR 4.7.1
// jshint ignore: start
var antlr4 = require("antlr4/index");
var PicoListener = require("./PicoListener").PicoListener;
var PicoVisitor = require("./PicoVisitor").PicoVisitor;

var grammarFileName = "Pico.g4";



var atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

var decisionsToDFA = atn.decisionToState.map(function (ds, index) {
  return new antlr4.dfa.DFA(ds, index);
});

var sharedContextCache = new antlr4.PredictionContextCache();

var literalNames = [null, "'='", "','", "':'", "'#'", "'('", "')'"];

var symbolicNames = [null, null, null, null, null, null, null, "ORG", "MOV",
  "ADD", "SUB", "MUL", "DIV", "IN", "OUT", "BEQ", "BGT",
  "JSR", "RTS", "STOP", "IDENTIFIER", "NUMBER", "SIGN",
  "EOL", "COMMENT", "WS"];

var ruleNames = ["program", "symbols", "symbolDecl", "origin", "instructions",
  "line", "instruction", "moveInstr", "arithmeticInstr",
  "branchInstr", "branchTarget", "ioInstr", "callInstr",
  "returnInstr", "stopInstr", "label", "identifier", "constant",
  "constantArg", "symbolConstantArg", "symbolDirectArg",
  "symbolIndirectArg", "argument"];

function PicoParser(input) {
  antlr4.Parser.call(this, input);
  this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
  this.ruleNames = ruleNames;
  this.literalNames = literalNames;
  this.symbolicNames = symbolicNames;
  return this;
}

PicoParser.prototype = Object.create(antlr4.Parser.prototype);
PicoParser.prototype.constructor = PicoParser;

Object.defineProperty(PicoParser.prototype, "atn", {
  get: function () {
    return atn;
  }
});

PicoParser.EOF = antlr4.Token.EOF;
PicoParser.T__0 = 1;
PicoParser.T__1 = 2;
PicoParser.T__2 = 3;
PicoParser.T__3 = 4;
PicoParser.T__4 = 5;
PicoParser.T__5 = 6;
PicoParser.ORG = 7;
PicoParser.MOV = 8;
PicoParser.ADD = 9;
PicoParser.SUB = 10;
PicoParser.MUL = 11;
PicoParser.DIV = 12;
PicoParser.IN = 13;
PicoParser.OUT = 14;
PicoParser.BEQ = 15;
PicoParser.BGT = 16;
PicoParser.JSR = 17;
PicoParser.RTS = 18;
PicoParser.STOP = 19;
PicoParser.IDENTIFIER = 20;
PicoParser.NUMBER = 21;
PicoParser.SIGN = 22;
PicoParser.EOL = 23;
PicoParser.COMMENT = 24;
PicoParser.WS = 25;

PicoParser.RULE_program = 0;
PicoParser.RULE_symbols = 1;
PicoParser.RULE_symbolDecl = 2;
PicoParser.RULE_origin = 3;
PicoParser.RULE_instructions = 4;
PicoParser.RULE_line = 5;
PicoParser.RULE_instruction = 6;
PicoParser.RULE_moveInstr = 7;
PicoParser.RULE_arithmeticInstr = 8;
PicoParser.RULE_branchInstr = 9;
PicoParser.RULE_branchTarget = 10;
PicoParser.RULE_ioInstr = 11;
PicoParser.RULE_callInstr = 12;
PicoParser.RULE_returnInstr = 13;
PicoParser.RULE_stopInstr = 14;
PicoParser.RULE_label = 15;
PicoParser.RULE_identifier = 16;
PicoParser.RULE_constant = 17;
PicoParser.RULE_constantArg = 18;
PicoParser.RULE_symbolConstantArg = 19;
PicoParser.RULE_symbolDirectArg = 20;
PicoParser.RULE_symbolIndirectArg = 21;
PicoParser.RULE_argument = 22;

function ProgramContext(parser, parent, invokingState) {
  if (parent === undefined) {
    parent = null;
  }
  if (invokingState === undefined || invokingState === null) {
    invokingState = -1;
  }
  antlr4.ParserRuleContext.call(this, parent, invokingState);
  this.parser = parser;
  this.ruleIndex = PicoParser.RULE_program;
  return this;
}

ProgramContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ProgramContext.prototype.constructor = ProgramContext;

ProgramContext.prototype.symbols = function () {
  return this.getTypedRuleContext(SymbolsContext, 0);
};

ProgramContext.prototype.origin = function () {
  return this.getTypedRuleContext(OriginContext, 0);
};

ProgramContext.prototype.instructions = function () {
  return this.getTypedRuleContext(InstructionsContext, 0);
};

ProgramContext.prototype.EOL = function () {
  return this.getToken(PicoParser.EOL, 0);
};

ProgramContext.prototype.enterRule = function (listener) {
  if (listener instanceof PicoListener) {
    listener.enterProgram(this);
  }
};

ProgramContext.prototype.exitRule = function (listener) {
  if (listener instanceof PicoListener) {
    listener.exitProgram(this);
  }
};

ProgramContext.prototype.accept = function (visitor) {
  if (visitor instanceof PicoVisitor) {
    return visitor.visitProgram(this);
  } else {
    return visitor.visitChildren(this);
  }
};


PicoParser.ProgramContext = ProgramContext;

PicoParser.prototype.program = function () {

  var localctx = new ProgramContext(this, this._ctx, this.state);
  this.enterRule(localctx, 0, PicoParser.RULE_program);
  try {
    this.enterOuterAlt(localctx, 1);
    this.state = 47;
    this._errHandler.sync(this);
    var la_ = this._interp.adaptivePredict(this._input, 0, this._ctx);
    if (la_ === 1) {
      this.state = 46;
      this.match(PicoParser.EOL);

    }
    this.state = 49;
    this.symbols();
    this.state = 50;
    this.origin();
    this.state = 51;
    this.instructions();
  } catch (re) {
    if (re instanceof antlr4.error.RecognitionException) {
      localctx.exception = re;
      this._errHandler.reportError(this, re);
      this._errHandler.recover(this, re);
    } else {
      throw re;
    }
  } finally {
    this.exitRule();
  }
  return localctx;
};

function SymbolsContext(parser, parent, invokingState) {
  if (parent === undefined) {
    parent = null;
  }
  if (invokingState === undefined || invokingState === null) {
    invokingState = -1;
  }
  antlr4.ParserRuleContext.call(this, parent, invokingState);
  this.parser = parser;
  this.ruleIndex = PicoParser.RULE_symbols;
  return this;
}

SymbolsContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
SymbolsContext.prototype.constructor = SymbolsContext;

SymbolsContext.prototype.EOL = function (i) {
  if (i === undefined) {
    i = null;
  }
  if (i === null) {
    return this.getTokens(PicoParser.EOL);
  } else {
    return this.getToken(PicoParser.EOL, i);
  }
};


SymbolsContext.prototype.symbolDecl = function (i) {
  if (i === undefined) {
    i = null;
  }
  if (i === null) {
    return this.getTypedRuleContexts(SymbolDeclContext);
  } else {
    return this.getTypedRuleContext(SymbolDeclContext, i);
  }
};

SymbolsContext.prototype.enterRule = function (listener) {
  if (listener instanceof PicoListener) {
    listener.enterSymbols(this);
  }
};

SymbolsContext.prototype.exitRule = function (listener) {
  if (listener instanceof PicoListener) {
    listener.exitSymbols(this);
  }
};

SymbolsContext.prototype.accept = function (visitor) {
  if (visitor instanceof PicoVisitor) {
    return visitor.visitSymbols(this);
  } else {
    return visitor.visitChildren(this);
  }
};


PicoParser.SymbolsContext = SymbolsContext;

PicoParser.prototype.symbols = function () {

  var localctx = new SymbolsContext(this, this._ctx, this.state);
  this.enterRule(localctx, 2, PicoParser.RULE_symbols);
  var _la = 0; // Token type
  try {
    this.enterOuterAlt(localctx, 1);
    this.state = 59;
    this._errHandler.sync(this);
    _la = this._input.LA(1);
    while (_la === PicoParser.IDENTIFIER || _la === PicoParser.EOL) {
      this.state = 54;
      this._errHandler.sync(this);
      _la = this._input.LA(1);
      if (_la === PicoParser.IDENTIFIER) {
        this.state = 53;
        this.symbolDecl();
      }

      this.state = 56;
      this.match(PicoParser.EOL);
      this.state = 61;
      this._errHandler.sync(this);
      _la = this._input.LA(1);
    }
  } catch (re) {
    if (re instanceof antlr4.error.RecognitionException) {
      localctx.exception = re;
      this._errHandler.reportError(this, re);
      this._errHandler.recover(this, re);
    } else {
      throw re;
    }
  } finally {
    this.exitRule();
  }
  return localctx;
};

function SymbolDeclContext(parser, parent, invokingState) {
  if (parent === undefined) {
    parent = null;
  }
  if (invokingState === undefined || invokingState === null) {
    invokingState = -1;
  }
  antlr4.ParserRuleContext.call(this, parent, invokingState);
  this.parser = parser;
  this.ruleIndex = PicoParser.RULE_symbolDecl;
  return this;
}

SymbolDeclContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
SymbolDeclContext.prototype.constructor = SymbolDeclContext;

SymbolDeclContext.prototype.identifier = function () {
  return this.getTypedRuleContext(IdentifierContext, 0);
};

SymbolDeclContext.prototype.constant = function () {
  return this.getTypedRuleContext(ConstantContext, 0);
};

SymbolDeclContext.prototype.enterRule = function (listener) {
  if (listener instanceof PicoListener) {
    listener.enterSymbolDecl(this);
  }
};

SymbolDeclContext.prototype.exitRule = function (listener) {
  if (listener instanceof PicoListener) {
    listener.exitSymbolDecl(this);
  }
};

SymbolDeclContext.prototype.accept = function (visitor) {
  if (visitor instanceof PicoVisitor) {
    return visitor.visitSymbolDecl(this);
  } else {
    return visitor.visitChildren(this);
  }
};


PicoParser.SymbolDeclContext = SymbolDeclContext;

PicoParser.prototype.symbolDecl = function () {

  var localctx = new SymbolDeclContext(this, this._ctx, this.state);
  this.enterRule(localctx, 4, PicoParser.RULE_symbolDecl);
  try {
    this.enterOuterAlt(localctx, 1);
    this.state = 62;
    this.identifier();
    this.state = 63;
    this.match(PicoParser.T__0);
    this.state = 64;
    this.constant();
  } catch (re) {
    if (re instanceof antlr4.error.RecognitionException) {
      localctx.exception = re;
      this._errHandler.reportError(this, re);
      this._errHandler.recover(this, re);
    } else {
      throw re;
    }
  } finally {
    this.exitRule();
  }
  return localctx;
};

function OriginContext(parser, parent, invokingState) {
  if (parent === undefined) {
    parent = null;
  }
  if (invokingState === undefined || invokingState === null) {
    invokingState = -1;
  }
  antlr4.ParserRuleContext.call(this, parent, invokingState);
  this.parser = parser;
  this.ruleIndex = PicoParser.RULE_origin;
  return this;
}

OriginContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
OriginContext.prototype.constructor = OriginContext;

OriginContext.prototype.ORG = function () {
  return this.getToken(PicoParser.ORG, 0);
};

OriginContext.prototype.constant = function () {
  return this.getTypedRuleContext(ConstantContext, 0);
};

OriginContext.prototype.EOL = function () {
  return this.getToken(PicoParser.EOL, 0);
};

OriginContext.prototype.enterRule = function (listener) {
  if (listener instanceof PicoListener) {
    listener.enterOrigin(this);
  }
};

OriginContext.prototype.exitRule = function (listener) {
  if (listener instanceof PicoListener) {
    listener.exitOrigin(this);
  }
};

OriginContext.prototype.accept = function (visitor) {
  if (visitor instanceof PicoVisitor) {
    return visitor.visitOrigin(this);
  } else {
    return visitor.visitChildren(this);
  }
};


PicoParser.OriginContext = OriginContext;

PicoParser.prototype.origin = function () {

  var localctx = new OriginContext(this, this._ctx, this.state);
  this.enterRule(localctx, 6, PicoParser.RULE_origin);
  try {
    this.enterOuterAlt(localctx, 1);
    this.state = 66;
    this.match(PicoParser.ORG);
    this.state = 67;
    this.constant();
    this.state = 68;
    this.match(PicoParser.EOL);
  } catch (re) {
    if (re instanceof antlr4.error.RecognitionException) {
      localctx.exception = re;
      this._errHandler.reportError(this, re);
      this._errHandler.recover(this, re);
    } else {
      throw re;
    }
  } finally {
    this.exitRule();
  }
  return localctx;
};

function InstructionsContext(parser, parent, invokingState) {
  if (parent === undefined) {
    parent = null;
  }
  if (invokingState === undefined || invokingState === null) {
    invokingState = -1;
  }
  antlr4.ParserRuleContext.call(this, parent, invokingState);
  this.parser = parser;
  this.ruleIndex = PicoParser.RULE_instructions;
  return this;
}

InstructionsContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
InstructionsContext.prototype.constructor = InstructionsContext;

InstructionsContext.prototype.line = function (i) {
  if (i === undefined) {
    i = null;
  }
  if (i === null) {
    return this.getTypedRuleContexts(LineContext);
  } else {
    return this.getTypedRuleContext(LineContext, i);
  }
};

InstructionsContext.prototype.EOL = function (i) {
  if (i === undefined) {
    i = null;
  }
  if (i === null) {
    return this.getTokens(PicoParser.EOL);
  } else {
    return this.getToken(PicoParser.EOL, i);
  }
};


InstructionsContext.prototype.enterRule = function (listener) {
  if (listener instanceof PicoListener) {
    listener.enterInstructions(this);
  }
};

InstructionsContext.prototype.exitRule = function (listener) {
  if (listener instanceof PicoListener) {
    listener.exitInstructions(this);
  }
};

InstructionsContext.prototype.accept = function (visitor) {
  if (visitor instanceof PicoVisitor) {
    return visitor.visitInstructions(this);
  } else {
    return visitor.visitChildren(this);
  }
};


PicoParser.InstructionsContext = InstructionsContext;

PicoParser.prototype.instructions = function () {

  var localctx = new InstructionsContext(this, this._ctx, this.state);
  this.enterRule(localctx, 8, PicoParser.RULE_instructions);
  var _la = 0; // Token type
  try {
    this.enterOuterAlt(localctx, 1);
    this.state = 75;
    this._errHandler.sync(this);
    _la = this._input.LA(1);
    while ((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << PicoParser.MOV) | (1 << PicoParser.ADD) | (1 << PicoParser.SUB) | (1 << PicoParser.MUL) | (1 << PicoParser.DIV) | (1 << PicoParser.IN) | (1 << PicoParser.OUT) | (1 << PicoParser.BEQ) | (1 << PicoParser.BGT) | (1 << PicoParser.JSR) | (1 << PicoParser.RTS) | (1 << PicoParser.STOP) | (1 << PicoParser.IDENTIFIER) | (1 << PicoParser.EOL))) !== 0)) {
      this.state = 70;
      this.line();
      this.state = 71;
      this.match(PicoParser.EOL);
      this.state = 77;
      this._errHandler.sync(this);
      _la = this._input.LA(1);
    }
  } catch (re) {
    if (re instanceof antlr4.error.RecognitionException) {
      localctx.exception = re;
      this._errHandler.reportError(this, re);
      this._errHandler.recover(this, re);
    } else {
      throw re;
    }
  } finally {
    this.exitRule();
  }
  return localctx;
};

function LineContext(parser, parent, invokingState) {
  if (parent === undefined) {
    parent = null;
  }
  if (invokingState === undefined || invokingState === null) {
    invokingState = -1;
  }
  antlr4.ParserRuleContext.call(this, parent, invokingState);
  this.parser = parser;
  this.ruleIndex = PicoParser.RULE_line;
  return this;
}

LineContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
LineContext.prototype.constructor = LineContext;

LineContext.prototype.label = function () {
  return this.getTypedRuleContext(LabelContext, 0);
};

LineContext.prototype.instruction = function () {
  return this.getTypedRuleContext(InstructionContext, 0);
};

LineContext.prototype.enterRule = function (listener) {
  if (listener instanceof PicoListener) {
    listener.enterLine(this);
  }
};

LineContext.prototype.exitRule = function (listener) {
  if (listener instanceof PicoListener) {
    listener.exitLine(this);
  }
};

LineContext.prototype.accept = function (visitor) {
  if (visitor instanceof PicoVisitor) {
    return visitor.visitLine(this);
  } else {
    return visitor.visitChildren(this);
  }
};


PicoParser.LineContext = LineContext;

PicoParser.prototype.line = function () {

  var localctx = new LineContext(this, this._ctx, this.state);
  this.enterRule(localctx, 10, PicoParser.RULE_line);
  var _la = 0; // Token type
  try {
    this.enterOuterAlt(localctx, 1);
    this.state = 79;
    this._errHandler.sync(this);
    _la = this._input.LA(1);
    if (_la === PicoParser.IDENTIFIER) {
      this.state = 78;
      this.label();
    }

    this.state = 82;
    this._errHandler.sync(this);
    _la = this._input.LA(1);
    if ((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << PicoParser.MOV) | (1 << PicoParser.ADD) | (1 << PicoParser.SUB) | (1 << PicoParser.MUL) | (1 << PicoParser.DIV) | (1 << PicoParser.IN) | (1 << PicoParser.OUT) | (1 << PicoParser.BEQ) | (1 << PicoParser.BGT) | (1 << PicoParser.JSR) | (1 << PicoParser.RTS) | (1 << PicoParser.STOP))) !== 0)) {
      this.state = 81;
      this.instruction();
    }

  } catch (re) {
    if (re instanceof antlr4.error.RecognitionException) {
      localctx.exception = re;
      this._errHandler.reportError(this, re);
      this._errHandler.recover(this, re);
    } else {
      throw re;
    }
  } finally {
    this.exitRule();
  }
  return localctx;
};

function InstructionContext(parser, parent, invokingState) {
  if (parent === undefined) {
    parent = null;
  }
  if (invokingState === undefined || invokingState === null) {
    invokingState = -1;
  }
  antlr4.ParserRuleContext.call(this, parent, invokingState);
  this.parser = parser;
  this.ruleIndex = PicoParser.RULE_instruction;
  return this;
}

InstructionContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
InstructionContext.prototype.constructor = InstructionContext;

InstructionContext.prototype.moveInstr = function () {
  return this.getTypedRuleContext(MoveInstrContext, 0);
};

InstructionContext.prototype.arithmeticInstr = function () {
  return this.getTypedRuleContext(ArithmeticInstrContext, 0);
};

InstructionContext.prototype.branchInstr = function () {
  return this.getTypedRuleContext(BranchInstrContext, 0);
};

InstructionContext.prototype.ioInstr = function () {
  return this.getTypedRuleContext(IoInstrContext, 0);
};

InstructionContext.prototype.callInstr = function () {
  return this.getTypedRuleContext(CallInstrContext, 0);
};

InstructionContext.prototype.returnInstr = function () {
  return this.getTypedRuleContext(ReturnInstrContext, 0);
};

InstructionContext.prototype.stopInstr = function () {
  return this.getTypedRuleContext(StopInstrContext, 0);
};

InstructionContext.prototype.enterRule = function (listener) {
  if (listener instanceof PicoListener) {
    listener.enterInstruction(this);
  }
};

InstructionContext.prototype.exitRule = function (listener) {
  if (listener instanceof PicoListener) {
    listener.exitInstruction(this);
  }
};

InstructionContext.prototype.accept = function (visitor) {
  if (visitor instanceof PicoVisitor) {
    return visitor.visitInstruction(this);
  } else {
    return visitor.visitChildren(this);
  }
};


PicoParser.InstructionContext = InstructionContext;

PicoParser.prototype.instruction = function () {

  var localctx = new InstructionContext(this, this._ctx, this.state);
  this.enterRule(localctx, 12, PicoParser.RULE_instruction);
  try {
    this.state = 91;
    this._errHandler.sync(this);
    switch (this._input.LA(1)) {
      case PicoParser.MOV:
        this.enterOuterAlt(localctx, 1);
        this.state = 84;
        this.moveInstr();
        break;
      case PicoParser.ADD:
      case PicoParser.SUB:
      case PicoParser.MUL:
      case PicoParser.DIV:
        this.enterOuterAlt(localctx, 2);
        this.state = 85;
        this.arithmeticInstr();
        break;
      case PicoParser.BEQ:
      case PicoParser.BGT:
        this.enterOuterAlt(localctx, 3);
        this.state = 86;
        this.branchInstr();
        break;
      case PicoParser.IN:
      case PicoParser.OUT:
        this.enterOuterAlt(localctx, 4);
        this.state = 87;
        this.ioInstr();
        break;
      case PicoParser.JSR:
        this.enterOuterAlt(localctx, 5);
        this.state = 88;
        this.callInstr();
        break;
      case PicoParser.RTS:
        this.enterOuterAlt(localctx, 6);
        this.state = 89;
        this.returnInstr();
        break;
      case PicoParser.STOP:
        this.enterOuterAlt(localctx, 7);
        this.state = 90;
        this.stopInstr();
        break;
      default:
        throw new antlr4.error.NoViableAltException(this);
    }
  } catch (re) {
    if (re instanceof antlr4.error.RecognitionException) {
      localctx.exception = re;
      this._errHandler.reportError(this, re);
      this._errHandler.recover(this, re);
    } else {
      throw re;
    }
  } finally {
    this.exitRule();
  }
  return localctx;
};

function MoveInstrContext(parser, parent, invokingState) {
  if (parent === undefined) {
    parent = null;
  }
  if (invokingState === undefined || invokingState === null) {
    invokingState = -1;
  }
  antlr4.ParserRuleContext.call(this, parent, invokingState);
  this.parser = parser;
  this.ruleIndex = PicoParser.RULE_moveInstr;
  return this;
}

MoveInstrContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
MoveInstrContext.prototype.constructor = MoveInstrContext;

MoveInstrContext.prototype.MOV = function () {
  return this.getToken(PicoParser.MOV, 0);
};

MoveInstrContext.prototype.argument = function (i) {
  if (i === undefined) {
    i = null;
  }
  if (i === null) {
    return this.getTypedRuleContexts(ArgumentContext);
  } else {
    return this.getTypedRuleContext(ArgumentContext, i);
  }
};

MoveInstrContext.prototype.enterRule = function (listener) {
  if (listener instanceof PicoListener) {
    listener.enterMoveInstr(this);
  }
};

MoveInstrContext.prototype.exitRule = function (listener) {
  if (listener instanceof PicoListener) {
    listener.exitMoveInstr(this);
  }
};

MoveInstrContext.prototype.accept = function (visitor) {
  if (visitor instanceof PicoVisitor) {
    return visitor.visitMoveInstr(this);
  } else {
    return visitor.visitChildren(this);
  }
};


PicoParser.MoveInstrContext = MoveInstrContext;

PicoParser.prototype.moveInstr = function () {

  var localctx = new MoveInstrContext(this, this._ctx, this.state);
  this.enterRule(localctx, 14, PicoParser.RULE_moveInstr);
  var _la = 0; // Token type
  try {
    this.enterOuterAlt(localctx, 1);
    this.state = 93;
    this.match(PicoParser.MOV);

    this.state = 94;
    this.argument();
    this.state = 95;
    this.match(PicoParser.T__1);
    this.state = 96;
    this.argument();
    this.state = 99;
    this._errHandler.sync(this);
    _la = this._input.LA(1);
    if (_la === PicoParser.T__1) {
      this.state = 97;
      this.match(PicoParser.T__1);
      this.state = 98;
      this.argument();
    }

  } catch (re) {
    if (re instanceof antlr4.error.RecognitionException) {
      localctx.exception = re;
      this._errHandler.reportError(this, re);
      this._errHandler.recover(this, re);
    } else {
      throw re;
    }
  } finally {
    this.exitRule();
  }
  return localctx;
};

function ArithmeticInstrContext(parser, parent, invokingState) {
  if (parent === undefined) {
    parent = null;
  }
  if (invokingState === undefined || invokingState === null) {
    invokingState = -1;
  }
  antlr4.ParserRuleContext.call(this, parent, invokingState);
  this.parser = parser;
  this.ruleIndex = PicoParser.RULE_arithmeticInstr;
  return this;
}

ArithmeticInstrContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ArithmeticInstrContext.prototype.constructor = ArithmeticInstrContext;

ArithmeticInstrContext.prototype.argument = function (i) {
  if (i === undefined) {
    i = null;
  }
  if (i === null) {
    return this.getTypedRuleContexts(ArgumentContext);
  } else {
    return this.getTypedRuleContext(ArgumentContext, i);
  }
};

ArithmeticInstrContext.prototype.ADD = function () {
  return this.getToken(PicoParser.ADD, 0);
};

ArithmeticInstrContext.prototype.SUB = function () {
  return this.getToken(PicoParser.SUB, 0);
};

ArithmeticInstrContext.prototype.DIV = function () {
  return this.getToken(PicoParser.DIV, 0);
};

ArithmeticInstrContext.prototype.MUL = function () {
  return this.getToken(PicoParser.MUL, 0);
};

ArithmeticInstrContext.prototype.enterRule = function (listener) {
  if (listener instanceof PicoListener) {
    listener.enterArithmeticInstr(this);
  }
};

ArithmeticInstrContext.prototype.exitRule = function (listener) {
  if (listener instanceof PicoListener) {
    listener.exitArithmeticInstr(this);
  }
};

ArithmeticInstrContext.prototype.accept = function (visitor) {
  if (visitor instanceof PicoVisitor) {
    return visitor.visitArithmeticInstr(this);
  } else {
    return visitor.visitChildren(this);
  }
};


PicoParser.ArithmeticInstrContext = ArithmeticInstrContext;

PicoParser.prototype.arithmeticInstr = function () {

  var localctx = new ArithmeticInstrContext(this, this._ctx, this.state);
  this.enterRule(localctx, 16, PicoParser.RULE_arithmeticInstr);
  var _la = 0; // Token type
  try {
    this.enterOuterAlt(localctx, 1);
    this.state = 101;
    _la = this._input.LA(1);
    if (!((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << PicoParser.ADD) | (1 << PicoParser.SUB) | (1 << PicoParser.MUL) | (1 << PicoParser.DIV))) !== 0))) {
      this._errHandler.recoverInline(this);
    }
    else {
      this._errHandler.reportMatch(this);
      this.consume();
    }
    this.state = 102;
    this.argument();
    this.state = 103;
    this.match(PicoParser.T__1);
    this.state = 104;
    this.argument();
    this.state = 105;
    this.match(PicoParser.T__1);
    this.state = 106;
    this.argument();
  } catch (re) {
    if (re instanceof antlr4.error.RecognitionException) {
      localctx.exception = re;
      this._errHandler.reportError(this, re);
      this._errHandler.recover(this, re);
    } else {
      throw re;
    }
  } finally {
    this.exitRule();
  }
  return localctx;
};

function BranchInstrContext(parser, parent, invokingState) {
  if (parent === undefined) {
    parent = null;
  }
  if (invokingState === undefined || invokingState === null) {
    invokingState = -1;
  }
  antlr4.ParserRuleContext.call(this, parent, invokingState);
  this.parser = parser;
  this.ruleIndex = PicoParser.RULE_branchInstr;
  return this;
}

BranchInstrContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
BranchInstrContext.prototype.constructor = BranchInstrContext;

BranchInstrContext.prototype.argument = function (i) {
  if (i === undefined) {
    i = null;
  }
  if (i === null) {
    return this.getTypedRuleContexts(ArgumentContext);
  } else {
    return this.getTypedRuleContext(ArgumentContext, i);
  }
};

BranchInstrContext.prototype.branchTarget = function () {
  return this.getTypedRuleContext(BranchTargetContext, 0);
};

BranchInstrContext.prototype.BEQ = function () {
  return this.getToken(PicoParser.BEQ, 0);
};

BranchInstrContext.prototype.BGT = function () {
  return this.getToken(PicoParser.BGT, 0);
};

BranchInstrContext.prototype.enterRule = function (listener) {
  if (listener instanceof PicoListener) {
    listener.enterBranchInstr(this);
  }
};

BranchInstrContext.prototype.exitRule = function (listener) {
  if (listener instanceof PicoListener) {
    listener.exitBranchInstr(this);
  }
};

BranchInstrContext.prototype.accept = function (visitor) {
  if (visitor instanceof PicoVisitor) {
    return visitor.visitBranchInstr(this);
  } else {
    return visitor.visitChildren(this);
  }
};


PicoParser.BranchInstrContext = BranchInstrContext;

PicoParser.prototype.branchInstr = function () {

  var localctx = new BranchInstrContext(this, this._ctx, this.state);
  this.enterRule(localctx, 18, PicoParser.RULE_branchInstr);
  var _la = 0; // Token type
  try {
    this.enterOuterAlt(localctx, 1);
    this.state = 108;
    _la = this._input.LA(1);
    if (!(_la === PicoParser.BEQ || _la === PicoParser.BGT)) {
      this._errHandler.recoverInline(this);
    }
    else {
      this._errHandler.reportMatch(this);
      this.consume();
    }
    this.state = 109;
    this.argument();
    this.state = 110;
    this.match(PicoParser.T__1);
    this.state = 111;
    this.argument();
    this.state = 112;
    this.match(PicoParser.T__1);
    this.state = 113;
    this.branchTarget();
  } catch (re) {
    if (re instanceof antlr4.error.RecognitionException) {
      localctx.exception = re;
      this._errHandler.reportError(this, re);
      this._errHandler.recover(this, re);
    } else {
      throw re;
    }
  } finally {
    this.exitRule();
  }
  return localctx;
};

function BranchTargetContext(parser, parent, invokingState) {
  if (parent === undefined) {
    parent = null;
  }
  if (invokingState === undefined || invokingState === null) {
    invokingState = -1;
  }
  antlr4.ParserRuleContext.call(this, parent, invokingState);
  this.parser = parser;
  this.ruleIndex = PicoParser.RULE_branchTarget;
  return this;
}

BranchTargetContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
BranchTargetContext.prototype.constructor = BranchTargetContext;

BranchTargetContext.prototype.symbolDirectArg = function () {
  return this.getTypedRuleContext(SymbolDirectArgContext, 0);
};

BranchTargetContext.prototype.symbolIndirectArg = function () {
  return this.getTypedRuleContext(SymbolIndirectArgContext, 0);
};

BranchTargetContext.prototype.enterRule = function (listener) {
  if (listener instanceof PicoListener) {
    listener.enterBranchTarget(this);
  }
};

BranchTargetContext.prototype.exitRule = function (listener) {
  if (listener instanceof PicoListener) {
    listener.exitBranchTarget(this);
  }
};

BranchTargetContext.prototype.accept = function (visitor) {
  if (visitor instanceof PicoVisitor) {
    return visitor.visitBranchTarget(this);
  } else {
    return visitor.visitChildren(this);
  }
};


PicoParser.BranchTargetContext = BranchTargetContext;

PicoParser.prototype.branchTarget = function () {
